--- a/solution-angular/public/templates/artists/show.html
+++ b/solution-angular/public/templates/artists/show.html
@@ -3,3 +3,6 @@
 <h3>{{artistController.oneArtist.instrument}}</h3>
 <h3>{{artistController.oneArtist.home_address}}</h3>
 <img src="{{artistController.oneArtist.photoUrl}}">
+<ul>
+  <li ng-repeat="song in artistController.oneArtist.songs">{{song.title}}</li>
+</ul>
