--- a/solution-angular/public/templates/managers/index.html
+++ b/solution-angular/public/templates/managers/index.html
@@ -13,6 +13,9 @@
         </h2>
       </li>
       <li>
+        <a href="{{manager.ad.url}}">{{manager.ad.headline}}</a>
+      </li>
+      <li>
         <a href="/managers/{{manager.id}}/edit">
           Edit
         </a>
