--- a/solution-angular/public/templates/managers/show.html
+++ b/solution-angular/public/templates/managers/show.html
@@ -2,3 +2,6 @@
 <h3>{{managerController.oneManager.email}}</h3>
 <h3>{{managerController.oneManager.office_number}}</h3>
 <h3>{{managerController.oneManager.cell_phone_number}}</h3>
+<ul>
+  <li ng-repeat="artist in managerController.oneManager.artists">{{artist.name}}</li>
+</ul>
