mid point sprint 2

--- a/starter-code/public/templates/managers/show.html
+++ b/starter-code/public/templates/managers/show.html
@@ -2,3 +2,7 @@
 <h3>{{managerController.oneManager.email}}</h3>
 <h3>{{managerController.oneManager.office_number}}</h3>
 <h3>{{managerController.oneManager.cell_phone_number}}</h3>
+<h2>Artist Managed</h2>
+<ul>
+	<li ng-repeat="artist in managerController.oneManager.artists">{{artist.name}}</li>
+</ul>
