--- a/starter-code/public/templates/artists/show.html
+++ b/starter-code/public/templates/artists/show.html
@@ -3,6 +3,7 @@
 <h3>{{artistController.oneArtist.instrument}}</h3>
 <h3>{{artistController.oneArtist.home_address}}</h3>
 <img src="{{artistController.oneArtist.photoUrl}}">
+<h2>Songs</h2>
 <ul>
-	<li ng-repeat="song in artistController.oneArtist.songs"></li>
+	<li ng-repeat="song in artistController.oneArtist.songs">{{song.title}}</li>
 </ul>
